# photutils

./: .appveyor_windows_sdk.cmd  .bandit.yaml  .coveragerc  .flake8  .gitignore  .lgtm.yml  .pep8speaks.yml  .pre-commit-config.yaml  .pycodestyle  .readthedocs.yaml  .readthedocs.yml  .rtd-environment.yml  .run_docker_tests.sh  .travis.yml  CHANGES.rst  CITATION  CITATION.cff  CITATION.md  CITATION.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  LICENSE.rst  LONG_DESCRIPTION.rst  MANIFEST.in  README.md  README.rst  _build_oldest_pins.py  ah_bootstrap.py  appveyor.yml  azure-pipelines.yml  circle.yml  codecov.yml  pyproject.toml  readthedocs.yml  requirement.txt  requirements-docs.txt  requirements.txt  setup.cfg  setup.py  (+1 more)
.circleci/: config.yml
.github/: dependabot.yml  zizmor.yml
.github/workflows/: 32bit_tests.yml  check_changelog.yml  check_milestone.yml  ci_cron_daily.yml  ci_cron_weekly.yml  ci_test_predeps.yml  ci_tests.yml  codeql.yml  cron_tests.yml  cron_tests_weekly.yml  publish.yml  zizmor.yml
benchmarks/: bench_aperture.py
detection/: README.rst  findstars.py  version.py
detection/utils/: scale_img.py
docs/: Makefile  aperture.rst  background.rst  centroids.rst  changelog.rst  citation.rst  conf.py  contributing.rst  datasets.rst  detection.rst  epsf.rst  getting_started.rst  grouping.rst  index.rst  install.rst  isophote.rst  isophote_faq.rst  legacy_segmentation.rst  license.rst  morphology.rst  nitpick-exceptions  nitpick-exceptions.txt  overview.rst  pixel_conventions.rst  profiles.rst  psf.rst  psf_matching.rst  rtd-pip-requirements  rtd_requirements.txt  segmentation.rst  test_function.rst  utils.rst
docs/_static/: custom.css  photutils.css
docs/api/: findobj.test.rst  findobj.utils.moments.moments.rst  findobj.utils.moments.moments_central.rst
docs/dev/: releasing.rst
docs/development/: contributing.rst  contributors.rst  index.rst  license.rst  releasing.rst
docs/findobj/: detection.rst  findstars.rst  findstars_start.rst  index.rst  morphology.rst  objshapes.rst  utils.rst
docs/getting_started/: citation.rst  importing.rst  index.rst  install.rst  overview.rst  performance_tips.rst  pixel_conventions.rst
docs/notebooks/: PSFPhotometrySpitzer.ipynb  PSFPhotometrySpitzer.ipynbtmp  catalog.xml.bz2  gaussian_psfs.ipynb
docs/photutils/: aperture.rst  background.rst  centroids.rst  datasets.rst  detection.rst  findstars.rst  geometry.rst  getting_started.rst  grouping.rst  high-level_API.rst  index.rst  install.rst  isophote.rst  isophote_faq.rst  morphology.rst  overview.rst  psf.rst  psf_building.rst  psf_match.rst  psf_matching.rst  segmentation.rst  utils.rst
docs/psf_spec/: background_estimator.rst  block_template.rst  culler_and_dner.rst  culler_and_ender.rst  finder.rst  fitter.rst  group_maker.rst  high_level_overview.rst  index.rst  noise_data.rst  noise_model.rst  psf_model.rst  scene_maker.rst  single_object_model.rst
docs/reference/: aperture_api.rst  background_api.rst  centroids_api.rst  datasets_api.rst  detection_api.rst  geometry_api.rst  index.rst  isophote_api.rst  morphology_api.rst  profiles_api.rst  psf_api.rst  psf_matching_api.rst  segmentation_api.rst  utils_api.rst
docs/release_notes/: index.rst
docs/user_guide/: aperture.rst  background.rst  centroids.rst  curves_of_growth.rst  datasets.rst  detection.rst  epsf.rst  epsf_building.rst  geometry.rst  grouping.rst  index.rst  isophote.rst  isophote_faq.rst  morphology.rst  profiles.rst  psf.rst  psf_matching.rst  radial_profiles.rst  segmentation.rst  utils.rst
docs/whats_new/: 1.1.rst  1.10.rst  1.11.rst  1.12.rst  1.13.rst  1.2.rst  1.3.rst  1.4.rst  1.5.rst  1.6.rst  1.7.rst  1.8.rst  1.9.rst  2.0.rst  2.1.rst  2.2.rst  2.3.rst  3.0.rst  3.1.rst  index.rst
findobj/: .coverage  __init__.py  detection.py  findstars.py  morphology.py  objshapes.py
findobj/tests/: test_findstars.py
findobj/utils/: moments.py  moments.pyx  scale_img.py
licenses/: LICENSE.rst  README.rst
photutils/: CITATION.rst  __init__.py  _astropy_init.py  aperture.py  aperture_core.py  aperture_funcs.py  arrayutils.py  background.py  circular_exact.pyx  circular_overlap.pyx  circular_subpixels.pyx  conftest.py  daogroup.py  elliptical_exact.pyx  extension.py  mask_data.py  morphology.py  morphometry.py  photometry.py  photometryutils.py  psf.py  segmentation.py  utils.py  wcs_utils.py  wcsutils.py
photutils/aperture/: __init__.py  _batch_overlap.pxd  _batch_photometry.pyx  _batch_stats.pyx  _photometry_utils.py  _segmentation.py  aperture_funcs.py  attributes.py  bounding_box.py  circle.py  converters.py  core.py  ellipse.py  flags.py  mask.py  mask_data.py  photometry.py  polygon.py  rectangle.py  region.py  regions2aperture.py  stats.py
photutils/background/: __init__.py  _utils.py  background_2d.py  core.py  interpolators.py  local_background.py
photutils/centroids/: __init__.py  _utils.py  core.py  core_temp.py  gaussian.py
photutils/converters/: __init__.py  apertures.py  functional_models.py  gridded_models.py  image_models.py
photutils/datasets/: __init__.py  examples.py  images.py  load.py  make.py  model_params.py  noise.py  psf_image.py  setup_package.py  sources.py  wcs.py
photutils/detection/: __init__.py  _utils.py  base.py  core.py  daofinder.py  deblend.py  detection.py  findpeaks.py  findstars.py  irafstarfind.py  irafstarfinder.py  lacosmic.py  morphology.py  peakfinder.py  setup_package.py  starfinder.py  userstarfinder.py
photutils/geometry/: __init__.py  _batch_photometry.pyx  _polygon_overlap.pxd  _polygon_overlap.pyx  circle_overlap.pxd  circle_overlap.pyx  circular_overlap.pxd  circular_overlap.pyx  core.pxd  core.pyx  ellipse_overlap.pxd  ellipse_overlap.pyx  elliptical_exact.pyx  elliptical_overlap.pxd  elliptical_overlap.pyx  polygon_overlap.pyx  rectangle_overlap.pxd  rectangle_overlap.pyx  rectangular_overlap.pxd  rectangular_overlap.pyx
photutils/isophote/: __init__.py  _ellipse_model.pyx  build_test_data.py  centerer.py  ellipse.py  ellipse_model.pyx  fitter.py  geometry.py  harmonics.py  (+5 more)
scripts/: pin_minimum_requirements.py
(+402 files in other folders)
