[metadata]
name = photutils
provides = photutils
version = 0.7.dev
author = Photutils Developers
author_email = photutils.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/astropy/photutils
github_project = astropy/photutils
edit_on_github = False
description = An Astropy package for source detection and photometry
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, photometry, aperture, psf, source detection, background, segmentation, centroids, isophote, morphology
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy
# Note: these versions also need to be defined in the package __init__.py
minimum_python_version = 3.5
minimum_numpy_version = 1.13

[options]
python_requires = >=3.5
packages = find:
setup_requires =
    numpy>=1.13
    cython>=0.28
install_requires =
    numpy>=1.13
    astropy>=2.0
tests_require =
    pytest
    pytest-astropy
    coverage
zip_safe = False

[options.package_data]
* = *.c
photutils.datasets = data/*
photutils.detection.tests = data/*
photutils.isophote.tests = data/*
photutils.tests = coveragerc

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[tool:pytest]
minversion = 3.1
testpaths = "photutils" "docs"
norecursedirs = "docs[\/]_build" "photutils[\/]extern"
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True
