[metadata]
name = photutils
provides = photutils
version = 0.8.dev
author = Photutils Developers
author_email = photutils.team@gmail.com
license = BSD 3-Clause License
license_file = LICENSE.rst
url = https://github.com/astropy/photutils
github_project = astropy/photutils
edit_on_github = False
description = An Astropy package for source detection and photometry
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, photometry, aperture, psf, source detection, background, segmentation, centroids, isophote, morphology
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Scientific/Engineering :: Astronomy

[options]
python_requires = >=3.6
packages = find:
setup_requires =
    numpy>=1.13
install_requires =
    numpy>=1.13
    astropy>=3.2
tests_require =
    pytest
    pytest-remotedata
    pytest-doctestplus
    coverage
zip_safe = False

[options.extras_require]
all =
    scipy
    matplotlib>=2.2
    scikit-image>=0.14.2
    scikit-learn
    gwcs>=0.11
docs =
    sphinx
    sphinx-astropy
    scipy
    matplotlib>=2.2
    scikit-image>=0.14.2
    scikit-learn
test =
    pytest-remotedata
    pytest-doctestplus
    pytest-xdist
    coverage
    scipy
    matplotlib>=2.2
    scikit-image>=0.14.2
    scikit-learn
    gwcs>=0.11

[options.package_data]
* = *.c
photutils.datasets = data/*
photutils.detection.tests = data/*
photutils.isophote.tests = data/*
photutils.tests = coveragerc
photutils = CITATION

[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[tool:pytest]
minversion = 3.1
testpaths = "photutils" "docs"
norecursedirs = "docs[\/]_build" "photutils[\/]extern"
doctest_plus = enabled
addopts = -p no:warnings

[ah_bootstrap]
auto_use = True
