[metadata]
name = photutils
author = Photutils Developers
author_email = photutils.team@gmail.com
license = BSD 3-Clause
license_file = LICENSE.rst
url = https://github.com/astropy/photutils
github_project = astropy/photutils
edit_on_github = False
description = An Astropy package for source detection and photometry
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = astronomy, astrophysics, photometry, aperture, psf, source detection, background, segmentation, centroids, isophote, morphology
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Cython
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17
    astropy>=3.2

[options.extras_require]
all =
    scipy
    matplotlib>=2.2
    scikit-image>=0.14.2
    scikit-learn
    gwcs>=0.12
test =
    pytest-astropy
docs =
    scipy
    sphinx-astropy
    matplotlib>=2.2
    scikit-image>=0.14.2
    scikit-learn
    gwcs>=0.12

[options.package_data]
photutils = CITATION.rst
photutils.datasets = data/*
photutils.detection.tests = data/*
photutils.isophote.tests = data/*

[tool:pytest]
testpaths = "photutils" "docs"
norecursedirs = "docs[\/]_build" "docs[\/]generated" "photutils[\/]extern"
astropy_header = true
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
filterwarnings =
    ignore:numpy.ufunc size changed:RuntimeWarning

[coverage:run]
omit =
    photutils/_astropy_init*
    photutils/conftest.py
    photutils/*setup_package*
    photutils/tests/*
    photutils/*/tests/*
    photutils/extern/*
    photutils/version*
    */photutils/_astropy_init*
    */photutils/conftest.py
    */photutils/*setup_package*
    */photutils/tests/*
    */photutils/*/tests/*
    */photutils/extern/*
    */photutils/version*

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
